--- a/index.html
+++ b/index.html
@@ -1,25 +1,30 @@
 <!DOCTYPE html>
-<html>
-<head>
-    <meta charset='utf-8'>
-    <meta http-equiv='X-UA-Compatible' content='IE=edge'>
-    <title>Hamburguer Rei</title>
-    <meta name='viewport' content='width=device-width, initial-scale=1'>
-    <link rel='stylesheet' type='text/css' media='screen' href='main.css'>
-    <script src='main.js'></script>
-</head>
-<body>
-    <div id="main">
-        <div id="">
+    <html>
+    <head>
+        <meta charset='utf-8'>
+        <meta http-equiv='X-UA-Compatible' content='IE=edge'>
+        <title>Hamburguer Rei</title>
+        <meta name='viewport' content='width=device-width, initial-scale=1, maximun-scale=1.0'>
+        <link rel='stylesheet' type='text/css' media='screen' href='css/style.css'>
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+        <script src='main.js'></script>
+    </head>
+    <body>
+        <header class="header">
+            <a href="#"><img src="assets/logo_1.png" width="150px"/></a>
+            <nav>
+                <ul class="menu">
+                    <li><a href="#"> Inicio </a></li>
+                    <li><a href="#"> Hamburgueres </a></li>
+                    <li><a href="#"> Restaurantes </a></li>
+                    <li><a href="#"> Fale Conosco </a></li>
+                </ul>
+            </nav>
+        </header>
 
-        </div>    
-    </div>
+        <footer>
 
-    </header>
-
-    <footer>
-
-    </footer>
-    
-</body>
+        </footer>
+        
+    </body>
 </html>
