--- a/index.html
+++ b/index.html
@@ -6,7 +6,6 @@
         <title>Hamburguer Rei</title>
         <meta name='viewport' content='width=device-width, initial-scale=1, maximun-scale=1.0'>
         <link rel='stylesheet' type='text/css' media='screen' href='css/style.css'>
-        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
         <script src='main.js'></script>
     </head>
     <body>
@@ -21,6 +20,32 @@
                 </ul>
             </nav>
         </header>
+        <section>
+            <div class="content">
+                <div class="slides">
+                    <input class="hidden" type="radio" name="slides" id="slide1" checked>
+                    <input class="hidden" type="radio" name="slides" id="slide2">
+                    <input class="hidden" type="radio" name="slides" id="slide3">
+
+                    <div class="slides s1">
+                        <img src="assets/banner.png" width="100%">
+                    </div>
+                    <div class="slides">
+                        <img src="assets/banner2.png">
+                    </div>
+                    <div class="slides">
+                        <img src="assets/banner3.png">
+                    </div>
+                </div>
+
+            </div>
+            <div class="navigation">
+                <label class="bar" for="slide1"></label>
+                <label class="bar" for="slide2"></label>
+                <label class="bar" for="slide3"></label>
+
+            </div>
+        </section>
 
         <footer>
 
