criando telas secundarias

--- a/index.html
+++ b/index.html
@@ -10,13 +10,15 @@
     </head>
     <body>
         <header class="header">
-            <a href="#"><img src="assets/logo_1.png" width="150px"/></a>
+            <a href="index.html"><img src="assets/logo_1.png" width="150px"/></a>
             <nav>
                 <ul class="menu">
-                    <li><a href="#"> Inicio </a></li>
-                    <li><a href="#"> Hamburgueres </a></li>
-                    <li><a href="#"> Restaurantes </a></li>
-                    <li><a href="#"> Fale Conosco </a></li>
+                    <li><a href="index.html"> Inicio </a></li>
+                    <li><a href="hamburgers.html"> Hamburgueres </a></li>
+                    <li><a href="coupons.html"> Cupons </a></li>
+                    <li><a href="contact_us.html"> Fale Conosco </a></li>
+                    <li><a href="about_us.html"> Sobre nós </a></li>
+
                 </ul>
             </nav>
         </header>
@@ -28,7 +30,7 @@
                     <input class="hidden" type="radio" name="slides" id="slide3">
 
                     <div class="slides s1">
-                        <img src="assets/banner.png" width="100%">
+                        <img src="assets/banner.png">
                     </div>
                     <div class="slides">
                         <img src="assets/banner2.png">
