criação do formulario

--- a/contact_us.html
+++ b/contact_us.html
@@ -1,31 +1,86 @@
 <!DOCTYPE html>
-<html>
-  <head>
-    <meta charset='utf-8'>
-    <meta http-equiv='X-UA-Compatible' content='IE=edge'>
-    <title>Hamburguer Rei</title>
-    <meta name='viewport' content='width=device-width, initial-scale=1, maximun-scale=1.0'>
-    <link rel='stylesheet' type='text/css' media='screen' href='css/style.css'>
-    <script src='main.js'></script>
-  </head>
-  <body>
-    <header class="header">
-      <a href="index.html"><img src="assets/logo_1.png" width="150px"/></a>
-      <nav>
-        <ul class="menu">
-          <li><a href="index.html"> Inicio </a></li>
-          <li><a href="hamburgers.html"> Hamburgueres </a></li>
-          <li><a href="coupons.html"> Cupons </a></li>
-          <li><a href="contact_us.html"> Fale Conosco </a></li>
-          <li><a href="about_us.html"> Sobre nós </a></li>
+    <html>
+    <head>
+        <meta charset='utf-8'>
+        <meta http-equiv='X-UA-Compatible' content='IE=edge'>
+        <title>Hamburguer Rei</title>
+        <meta name='viewport' content='width=device-width, initial-scale=1, maximun-scale=1.0'>
+        <script src='main.js'></script>
+        <link rel='stylesheet' type='text/css' media='screen' href='css/style.css'>
+    </head>
+    <body>
+        <header class="header">
+            <a href="index.html"><img id="logo" src="assets/logo_4.png" width="85px"/></a>
+            <nav>
+                <ul class="menu">
+                    <li><a href="index.html"> Inicio </a></li>
+                    <li><a href="hamburgers.html"> Hamburgueres </a></li>
+                    <li><a href="coupons.html"> Cupons </a></li>
+                    <li><a href="contact_us.html"> Fale Conosco </a></li>
+                    <li><a href="about_us.html"> Sobre nós </a></li>
 
-        </ul>
-      </nav>
-    </header>
+                </ul>
+            </nav>
+        </header>
+        <div class="content">
+          <section class="section">
+            <h1 class="titulo"> bem vindo, ao fale conosco</h1>
+            <p class="subtitulo">informe seus dados para que possamos entrar em contato com você<p>
 
-    <footer>
+            <form>
+              <fieldset class="group">
+                <div>
+                  <label for="nome"><strong>Nome</strong></label>
+                  <input type="text" name="nome" id="nome" required>
 
+                  <label for="sobrenome"><strong>Sobrenome</strong></label>
+                  <input type="text" name="sobrenome" id="sobrenome">
+                </div>
+
+                <div>
+                  <label for="email"><strong>E-mail</strong></label>
+                  <input type="email" name="email" id="email" required>
+                </div>
+              </fieldset>
+              <fieldset class="group">
+
+                <div>
+                  <label for="gender"><strong>Gênero</strong></label>
+                  <select id="gender">
+                    <optionz>não especificado</option>
+                    <option>Masculino</option>
+                    <option>Feminino </option>
+                  </select>
+
+                  <label for="age"><strong>Idade</strong></label>
+                    <input type="int" name="age" id="age" required>
+                </div>
+              </fieldset>
+
+                <div>
+                  <br>
+                  <label for="comment"><strong>Conte Sua experiencia para nós</strong></label>
+                  <textarea row="6" style="width: 26em" name="comment" id="comment" required></textarea>
+                </div>
+
+                <button type="submit">Enviar</button>
+            </form>
+          </section>
+        </div>
+        <footer>
+            <div class="logo-footer d-flex justify-content-center">
+                <img src="assets/logo_1.png" width="130px">
+            </div>
+
+            <nav>
+                <ul class="menu">
+                    <li class="footer-li"><a class="footer-a" href="index.html"> Inicio </a></li>
+                    <li class="footer-li"><a class="footer-a" href="hamburgers.html"> Hamburgueres </a></li>
+                    <li class="footer-li"><a class="footer-a" href="coupons.html"> Cupons </a></li>
+                    <li class="footer-li"><a class="footer-a" href="contact_us.html"> Fale Conosco </a></li>
+                    <li class="footer-li"><a class="footer-a" href="about_us.html"> Sobre nós </a></li>
+                </ul>
+            </nav>
     </footer>
-        
-  </body>
+    </body>
 </html>
