--- a/hamburgers.html
+++ b/hamburgers.html
@@ -1,30 +1,48 @@
 <!DOCTYPE html>
-<html>
-  <head>
-    <meta charset='utf-8'>
-    <meta http-equiv='X-UA-Compatible' content='IE=edge'>
-    <title>Hamburguer Rei</title>
-    <meta name='viewport' content='width=device-width, initial-scale=1, maximun-scale=1.0'>
-    <link rel='stylesheet' type='text/css' media='screen' href='css/style.css'>
-    <script src='main.js'></script>
-  </head>
-  <body>
-    <header class="header">
-      <a href="index.html"><img src="assets/logo_1.png" width="150px"/></a>
-      <nav>
-        <ul class="menu">
-          <li><a href="index.html"> Inicio </a></li>
-          <li><a href="hamburgers.html"> Hamburgueres </a></li>
-          <li><a href="coupons.html"> Cupons </a></li>
-          <li><a href="contact_us.html"> Fale Conosco </a></li>
-          <li><a href="about_us.html"> Sobre nós </a></li>
-        </ul>
-      </nav>
-    </header>
+    <html>
+    <head>
+        <meta charset='utf-8'>
+        <meta http-equiv='X-UA-Compatible' content='IE=edge'>
+        <title>Hamburguer Rei</title>
+        <meta name='viewport' content='width=device-width, initial-scale=1, maximun-scale=1.0'>
+        <script src='main.js'></script>
+        <link rel='stylesheet' type='text/css' media='screen' href='css/style.css'>
+    </head>
+    <body>
+        <header class="header">
+            <a href="index.html"><img id="logo" src="assets/logo_4.png" width="85px"/></a>
+            <nav>
+                <ul class="menu">
+                    <li><a href="index.html"> Inicio </a></li>
+                    <li><a href="hamburgers.html"> Hamburgueres </a></li>
+                    <li><a href="coupons.html"> Cupons </a></li>
+                    <li><a href="contact_us.html"> Fale Conosco </a></li>
+                    <li><a href="about_us.html"> Sobre nós </a></li>
 
-    <footer>
+                </ul>
+            </nav>
+        </header>
+        <div class="content">
+          <section class="flex">  
+            <div>
+                <img src="assets/burguer_2.jpg" alt="Big King">
+            </div>
+          </section>
+        </div>  
+        <footer>
+            <div class="logo-footer d-flex justify-content-center">
+                <img src="assets/logo_1.png" width="130px">
+            </div>
 
+            <nav>
+                <ul class="menu">
+                    <li class="footer-li"><a class="footer-a" href="index.html"> Inicio </a></li>
+                    <li class="footer-li"><a class="footer-a" href="hamburgers.html"> Hamburgueres </a></li>
+                    <li class="footer-li"><a class="footer-a" href="coupons.html"> Cupons </a></li>
+                    <li class="footer-li"><a class="footer-a" href="contact_us.html"> Fale Conosco </a></li>
+                    <li class="footer-li"><a class="footer-a" href="about_us.html"> Sobre nós </a></li>
+                </ul>
+            </nav>
     </footer>
-        
-  </body>
+    </body>
 </html>
