--- a/index.html
+++ b/index.html
@@ -5,12 +5,12 @@
         <meta http-equiv='X-UA-Compatible' content='IE=edge'>
         <title>Hamburguer Rei</title>
         <meta name='viewport' content='width=device-width, initial-scale=1, maximun-scale=1.0'>
-        <link rel='stylesheet' type='text/css' media='screen' href='css/style.css'>
         <script src='main.js'></script>
+        <link rel='stylesheet' type='text/css' media='screen' href='css/style.css'>
     </head>
-    <body>
+    <body class="index">
         <header class="header">
-            <a href="index.html"><img src="assets/logo_1.png" width="150px"/></a>
+            <a href="index.html"><img id="logo" src="assets/logo_4.png" width="85px"/></a>
             <nav>
                 <ul class="menu">
                     <li><a href="index.html"> Inicio </a></li>
@@ -22,20 +22,19 @@
                 </ul>
             </nav>
         </header>
-        <section>
-            <div class="content">
+            <div class="content-index">
                 <div class="slides">
                     <input class="hidden" type="radio" name="slides" id="slide1" checked>
                     <input class="hidden" type="radio" name="slides" id="slide2">
                     <input class="hidden" type="radio" name="slides" id="slide3">
 
-                    <div class="slides s1">
+                    <div class="slide s1">
                         <img src="assets/banner.png">
                     </div>
-                    <div class="slides">
+                    <div class="slide">
                         <img src="assets/banner2.png">
                     </div>
-                    <div class="slides">
+                    <div class="slide">
                         <img src="assets/banner3.png">
                     </div>
                 </div>
@@ -45,13 +44,21 @@
                 <label class="bar" for="slide1"></label>
                 <label class="bar" for="slide2"></label>
                 <label class="bar" for="slide3"></label>
-
             </div>
-        </section>
-
         <footer>
+            <div class="logo-footer d-flex justify-content-center">
+                <img src="assets/logo_1.png" width="130px">
+            </div>
 
-        </footer>
-        
+            <nav>
+                <ul class="menu">
+                    <li class="footer-li"><a class="footer-a" href="index.html"> Inicio </a></li>
+                    <li class="footer-li"><a class="footer-a" href="hamburgers.html"> Hamburgueres </a></li>
+                    <li class="footer-li"><a class="footer-a" href="coupons.html"> Cupons </a></li>
+                    <li class="footer-li"><a class="footer-a" href="contact_us.html"> Fale Conosco </a></li>
+                    <li class="footer-li"><a class="footer-a" href="about_us.html"> Sobre nós </a></li>
+                </ul>
+            </nav>
+    </footer>
     </body>
 </html>
